--- a/app/src/main/res/layout/admin_tristan.xml
+++ b/app/src/main/res/layout/admin_tristan.xml
@@ -8,7 +8,7 @@
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/ta_user_list"
+        android:id="@+id/ta_item_list"
         android:orientation="vertical"
         android:layout_weight="7">
 
