Made the application work on emulators and inserted pictures

--- a/app/src/main/res/drawable/dots.xml
+++ b/app/src/main/res/drawable/dots.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_overflow_holo_dark"
-        android:contentDescription="@string/descr_overflow_button"
-        android:onClick="showPopup" />
+    <!--<ImageButton-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:src="@drawable/ic_overflow_holo_dark"-->
+        <!--android:contentDescription="@string/descr_overflow_button"-->
+        <!--android:onClick="showPopup" />-->
 
 </selector>
