--- a/app/src/main/res/layout/tour_john.xml
+++ b/app/src/main/res/layout/tour_john.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="7"
+        android:layout_weight="3"
         android:orientation="vertical">
 
         <ScrollView
@@ -21,6 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/jt_map"
+            android:src="@drawable/evisitor_maps_museum0216"
             android:visibility="gone"/>
 
         <ScrollView
@@ -57,7 +58,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="3"
+        android:layout_weight="7"
         android:orientation="vertical"
         android:gravity="center_vertical">
 
