--- a/app/src/main/res/layout/admin_tristan.xml
+++ b/app/src/main/res/layout/admin_tristan.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:padding="@dimen/activity_horizontal_margin"
+    android:padding="5dp"
     android:layout_height="match_parent"
     android:weightSum="10">
 
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         android:id="@+id/ta_item_list"
         android:orientation="vertical"
-        android:layout_weight="7">
+        android:layout_weight="5">
 
 
     </ScrollView>
@@ -18,7 +18,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="3"
+        android:layout_weight="5"
         android:orientation="vertical">
 
         <TextView
