--- a/app/src/main/res/layout/tour_john.xml
+++ b/app/src/main/res/layout/tour_john.xml
@@ -36,6 +36,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:autoLink="web"
                     android:text="@string/help_text"
                     android:textSize="@dimen/standard_text"/>
 
