Changed some more information regarding selections

--- a/app/src/main/res/layout/admin_john.xml
+++ b/app/src/main/res/layout/admin_john.xml
@@ -41,6 +41,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/ja_info_title"
                     android:text="@string/heading"
                     android:paddingBottom="20dp"
                     android:textStyle="bold"
@@ -50,6 +51,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/ja_info_text"
                     android:textSize="@dimen/standard_text"
                     android:text="@string/item_desc"/>
 
