--- a/app/src/main/res/layout/admin_tristan.xml
+++ b/app/src/main/res/layout/admin_tristan.xml
@@ -6,11 +6,11 @@
     android:weightSum="10">
 
     <ScrollView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/ta_item_list"
         android:orientation="vertical"
-        android:layout_weight="5">
+        android:layout_weight="2">
 
 
     </ScrollView>
@@ -23,9 +23,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="5"
+        android:layout_weight="8"
         android:paddingLeft="5dp"
         android:orientation="vertical">
 
