--- a/app/src/main/res/layout/item_info.xml
+++ b/app/src/main/res/layout/item_info.xml
@@ -1,45 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="@dimen/activity_horizontal_margin">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/info_title"
-                android:text="@string/heading"
-                android:paddingBottom="20dp"
-                android:textStyle="bold"
-                android:textSize="30sp"
-                android:gravity="center"/>
+                android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/info_text"
-                android:textSize="@dimen/standard_text"
-                android:text="@string/item_desc"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/info_title"
+                    android:text="@string/heading"
+                    android:paddingBottom="20dp"
+                    android:textStyle="bold"
+                    android:textSize="30sp"
+                    android:gravity="center"/>
 
-        </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/info_text"
+                    android:textSize="@dimen/standard_text"
+                    android:text="@string/item_desc"/>
+
+            </LinearLayout>
 
 
-    </ScrollView>
+        </ScrollView>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical"/>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"/>
+
+    </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        style="@style/ButtonTheme"
+        android:text="Back"
+        android:id="@+id/back_button"/>
 
 
 </LinearLayout>
