--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ButtonTheme" parent="Widget.AppCompat.Button.Borderless.Colored">
+        <item name="android:textAllCaps">true</item>
+    </style>
+
 </resources>
