--- a/app/src/main/res/layout/map_tristan.xml
+++ b/app/src/main/res/layout/map_tristan.xml
@@ -6,6 +6,6 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/evisitor_maps_museum0216"/>
+        android:src="@drawable/buildingvmap"/>
 
 </LinearLayout>
